feat: Agregar disgregacion CO2 por tipo de vehiculo y corregir formato MD
- Agregar calculo de reduccion CO2 disgregado por motos (87.4%) y mototaxis (12.6%)
- Agregar baseline Iquitos: 70,500 motos (105,750 tCO2), 61,000 mototaxis (152,500 tCO2)
- Agregar contribucion porcentual vs baseline de Iquitos por tipo de vehiculo
- Corregir electricity_generation de 275,000 a 290,000 tCO2/año
- Corregir formato tablas Markdown (MD060) en todos los archivos
- Eliminar variables Python no usadas (MD040)
- Agregar linea base emisiones a OBJETIVOS, RESUMEN, VALIDACION, OPERACIONALIZACION
- Actualizar reports OE2 y OE3 con metodologia corregida

Metodologia:
- DIRECTA = gasolina evitada (beneficio bruto electrificacion)
- INDIRECTA = PV/BESS desplaza red termica
- NETA = DIRECTA + INDIRECTA

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -171,5 +171,9 @@ oe3:
     kgco2_per_gallon: 8.9
     project_life_years: 20
   city_baseline_tpy:
-    transport: 258250.0
-    electricity_generation: 275000.0
+    # Fuente: Plan de Desarrollo de Maynas [4]
+    # - 61,000 mototaxis: 152,500 tCO2/año
+    # - 70,500 motos lineales: 105,750 tCO2/año
+    transport: 258250.0 # Total sector transporte (95% de emisiones)
+    # Sistema eléctrico aislado: 22.5 millones galones/año → 290,000 tCO2/año
+    electricity_generation: 290000.0
