chore: reorganizar documentación y limpiar archivos redundantes
Cambios:
- Crear carpeta docs/ para documentación del proyecto
- Mover: OBJETIVOS.md, OPERACIONALIZACION.md, VALIDACION.md, RESUMEN.md, LINEA_BASE_EMISIONES.md a docs/
- Crear docs/thesis/ para documentos de tesis (PDFs, DOCX)
- Eliminar archivos redundantes: ESTADO_*.md, CUMPLIMIENTO_ESTRICTO.md, VERIFICACION_REQUERIMIENTOS.md
- Actualizar .gitignore para excluir logs, checkpoints y outputs generados

Estructura limpia:
 README.md (raíz)
 docs/ (documentación)
    OBJETIVOS.md
    OPERACIONALIZACION.md
    thesis/ (PDFs)
 scripts/ (pipeline)
 src/ (código)
 configs/ (configuración)

--- a/.gitignore
+++ b/.gitignore
@@ -88,22 +88,24 @@ cython_debug/
 # VS Code
 .vscode/
 
-# Project-specific
+# Project-specific - Ignore generated data (reproducible from pipeline)
 analyses/
 outputs/
 data/interim/
 data/processed/
-IT_TAPIA_COYSO_MAC_v6_final.docx
-tesisvefinal.pdf
-*.csv
-*.json
-*.md
-*.png
+reports/oe2/
+reports/oe3/
+
+# Logs temporales
 *.log
-*.pdf
-*.docx
-*.txt
-Deployment.pdf
-.env.example
-REPORTE_CUMPLIMIENTO.json
-extract_refs.txt
+*_log.txt
+serial_training_log.txt
+
+# Documentos de tesis (en docs/thesis/)
+docs/thesis/
+
+# Checkpoints de entrenamiento (muy grandes)
+*.zip
+
+# Docker local
+docker/
