feat: Add real-time control API and simulation mode for A2C agent
- Add control endpoints (/control/load-model, /control/get-actions, /control/status)
- Add simulation endpoints (/simulation/step, /simulation/run-24h, /simulation/reset)
- Update docker-compose with training checkpoints mount
- Update OE1/OE2 reports with corrected infrastructure values (128 chargers)
- Fix charger config in RBC agent and rewards (112 motos @ 2kW + 16 mototaxis @ 3kW)
- Remove outdated REPORTE_SISTEMA_COMPLETO.md

--- a/docker/fastapi-mongo/docker-compose.yml
+++ b/docker/fastapi-mongo/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     volumes:
       - ./app:/app/app:ro
       - ../../analyses/oe3:/data/analyses/oe3:ro
+      - ../../analyses/oe3/training:/data/analyses/oe3/training:ro
       - ../../outputs/oe3:/data/outputs/oe3:ro
     restart: unless-stopped
     networks:
