--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ python-dotenv>=1.0
 matplotlib>=3.8
 pvlib>=0.10
 citylearn>=2.5.0
-gymnasium>=0.29
+gymnasium<=0.28.1
 torch>=2.0
+stable-baselines3>=2.3.0
