--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -104,16 +104,16 @@ oe3:
     resume_checkpoints: false
     multi_objective_priority: co2_focus
     sac:
-      episodes: 2
+      episodes: 10
       resume_checkpoints: false
       deterministic_eval: true
       device: cuda
-      batch_size: 4096
-      buffer_size: 500000
-      gradient_steps: 4
-      learning_starts: 500
+      batch_size: 8192
+      buffer_size: 1000000
+      gradient_steps: 8
+      learning_starts: 250
       train_freq: 1
-      log_interval: 100
+      log_interval: 50
       use_amp: true
       checkpoint_freq_steps: 500
       progress_interval_episodes: 1
@@ -127,15 +127,15 @@ oe3:
         ev: 0.1
         grid: 0.05
     ppo:
-      episodes: 2
+      episodes: 10
       resume_checkpoints: false
-      timesteps: 7008
+      timesteps: 87600
       n_steps: 8192
-      batch_size: 2048
-      n_epochs: 3
+      batch_size: 4096
+      n_epochs: 5
       use_amp: true
-      log_interval: 250
-      checkpoint_freq_steps: 500
+      log_interval: 500
+      checkpoint_freq_steps: 1000
       progress_interval_episodes: 1
       save_final: true
       device: cuda
@@ -149,16 +149,16 @@ oe3:
         ev: 0.1
         grid: 0.05
     a2c:
-      episodes: 2
+      episodes: 10
       resume_checkpoints: false
-      timesteps: 7008
-      n_steps: 4096
-      learning_rate: 0.0007
+      timesteps: 87600
+      n_steps: 8192
+      learning_rate: 0.001
       entropy_coef: 0.01
       vf_coef: 0.5
       max_grad_norm: 0.5
-      log_interval: 250
-      checkpoint_freq_steps: 500
+      log_interval: 500
+      checkpoint_freq_steps: 1000
       progress_interval_episodes: 1
       save_final: true
       device: cuda
