--- a/configs/agents/a2c_config.yaml
+++ b/configs/agents/a2c_config.yaml
@@ -44,6 +44,14 @@ a2c:
     overcharge_threshold: 0.95
     decay_rate: 0.98
 
+  # Multi-Objective Weights (ACTUALIZADOS 2026-02-07)
+  multi_objective_weights:
+    co2: 0.35
+    solar: 0.20
+    ev: 0.30
+    cost: 0.10
+    grid: 0.05
+
   # Network architecture
   network:
     hidden_sizes: [256, 256]
