--- a/configs/agents/ppo_config.yaml
+++ b/configs/agents/ppo_config.yaml
@@ -54,6 +54,14 @@ ppo:
     kl_adaptive_down: 0.5
     kl_adaptive_up: 1.05
 
+  # Multi-Objective Weights (ACTUALIZADOS 2026-02-07)
+  multi_objective_weights:
+    co2: 0.35
+    solar: 0.20
+    ev: 0.30
+    cost: 0.10
+    grid: 0.05
+
   # Device
   device: "auto"  # "cuda", "mps", "cpu", or "auto"
   use_amp: true
