--- a/configs/agents/sac_config.yaml
+++ b/configs/agents/sac_config.yaml
@@ -33,6 +33,14 @@ sac:
     critic_loss_scale: 0.1
     q_target_clip: 10.0
 
+  # Multi-Objective Weights (ACTUALIZADOS 2026-02-07)
+  multi_objective_weights:
+    co2: 0.35
+    solar: 0.20
+    ev: 0.30
+    cost: 0.10
+    grid: 0.05
+
   # Device
   device: "auto"  # "cuda", "mps", "cpu", or "auto"
   use_amp: true
