revert: BESS capacity back to 2000 kWh (confirmed per bess_ano_2024.csv)
- Reverted all files from 1700 kWh → 2000 kWh (correct specification)
- Updated README.md: 1700 → 2000 kWh
- Updated configs/default.yaml: 1700 → 2000 kWh
- Updated scripts/train/common_constants.py: 1700 → 2000 kWh
- Updated scripts/train/train_a2c.py validation: 1700 → 2000 kWh
- Updated scripts/train/train_ppo.py constants: 1700 → 2000 kWh
- Updated analizar_energia_diaria_bess.py: 1700 → 2000 kWh
- Updated analizar_nueva_logica_descarga.py: 1700 → 2000 kWh
- Confirmed per bess_ano_2024.csv max SOC value = 2000 kWh ✅

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -33,7 +33,7 @@ oe2:
     discharge_only_no_solar: false  # v5.4: MALL discharge during day if excess
     dod: 0.80      # 80% Depth of Discharge (min SOC = 20%)
     efficiency_roundtrip: 0.95
-    fixed_capacity_kwh: 1700.0  # v5.4: 1700 kWh nominal (1360 usable @ 20-100% SOC) ✅ UPDATED
+    fixed_capacity_kwh: 2000.0  # v5.5: 2000 kWh nominal (1600 usable @ 20-100% SOC)
     fixed_power_kw: 400.0       # v5.4: 400 kW carga/descarga symmetric
     load_scope: dual_ev_and_mall  # v5.4: EV + MALL priority
     min_soc_percent: 20.0       # v5.4: Hard constraint @ 22h closing
